syntax = "proto3";
option java_multiple_files = true;
package com.aihangxunxi.aitalk.im.protocol.buffers;
import "Msg.proto";
import "OpCode.proto";
import "Connection.proto";
import "Auth.proto";
import "Group.proto";
import "Invitation.proto";
import "Friend.proto";
import "Fans.proto";
//***********************协议封装***********************//

message Message {
  //头部相关字段编号范围:1～10
  uint64 magic = 1; //魔数 主要用于保证协议安全性,如果magic不匹配直接断掉连接不予处理
  uint32 version = 2; // 版本号
  OpCode op_code = 3; // 消息协议类型，操作码
  uint64 seq = 4; //序列号,主要用于保证Request和Ack,Notify的seq值必须相同，使得发送端可以进行事务匹配处理
  // uint64 payload_length = 5; // 负载长度,用于解包时验证包的有效性完整性、目前使用protobuf无需手动解包，此字段可忽略

  oneof payload {
    // 连接相关11～20
    AuthRequest auth_request = 11;
    AuthAck auth_ack = 12;
    //    Ping ping = 13;
    //    Pong pong = 14;
    //    Disconnect disconnect = 15;

    // 消息相关21～50
    MsgRequest msg_request = 20;

    QueryUserGroupsRequest query_user_group_request = 21;
    QueryUserGroupsAck query_user_group_ack = 22;
    MsgAck msg_ack = 23;

    AskFroJoinGroupRequest ask_for_join_group_request = 24;
    AskForJoinGroupAck ask_for_join_group_ack = 25;
    InvitationJoinGroupRequest invitation_join_group_request = 26;
    InvitationJoinGroupAck invitation_join_group_ack = 27;

    CreateGroupRequest create_group_request = 28;
    CreateGroupAck create_group_ack = 29;

    RemoveGroupMemberRequest remove_group_member_request = 30;
    RemoveGroupMemberAck remove_group_member_ack = 31;

    ChangeGroupNameRequest change_group_name_request = 32;
    ChangeGroupNameAck change_group_name_ack = 33;

    ChangeGroupNoticeRequest change_group_notice_request = 34;
    ChangeGroupNoticeAck change_group_notice_ack = 35;

    ChangeMucMuteRequest change_muc_mute_request = 36;
    ChangeMucMuteAck change_muc_mute_ack = 37;

    ChangeMucConfirmJoinRequest change_muc_confirm_join_request = 38;
    ChangeMucConfirmJoinAck change_muc_confirm_join_ack = 39;

    ExitGroupRequest exit_group_request = 40;
    ExitGroupAck exit_group_ack = 41;

    AccessUserJoinMucRequest access_user_join_muc_request = 42;
    AccessUserJoinMucAck access_user_join_muc_ack = 43;

    RefuseUserJoinMucRequest refuse_user_join_muc_request = 44;
    RefuseUserJoinMucAck refuse_user_join_muc_ack = 45;


    QueryFansRequest query_fans_request = 46;
    QueryFansAck query_fans_ack = 47;

    WithdrawMucRequest withdraw_muc_request = 48;
    WithdrawMucAck withdraw_muc_ack = 49;

    PullMucHistRequest pull_muc_hist_request = 50;
    PullMucHistAck pull_muc_hist_ack = 51;

    MucReadNotifyRequest muc_read_notify_request = 52;

    PullMucMemberRequest pull_muc_member_request = 53;
    PullMucMemberAck pull_muc_member_ack = 54;

    UpdateUserProfileRequest update_user_profile_request = 55;
    UpdateUserProfileAck update_user_profile_ack = 56;

    BindUserDeviceRequest bind_user_device_request = 57;

    WithdrawConsultRequest withdraw_consult_request = 500;

    WithdrawConsultAck withdraw_consult_ack = 501;
    //------------------------------------------好友及好友邀请---------------------------------------------------

    InvitationRequestRequest invitation_request_request = 1001;
    InvitationRequestAck invitation_request_ack = 1002;
    InvitationAcceptRequest invitation_accept_request = 1003;
    InvitationAcceptAck invitation_accept_ack = 1004;
    InvitationDeclinedRequest invitation_declined_request = 1005;
    InvitationDeclinedAck invitation_declined_ack = 1006;
    InvitationRequest invitation_request = 1007;
    InvitationAck invitation_ack = 1008;
    FriendRequest friend_request = 1009;
    FriendAck friend_ack = 1010;

    //----------------------------------------------------------------------------------------------------------

    MsgReadNotify msg_read_notify = 1101;
    MsgReadAck msg_read_ack = 1102;
    SendSystemInfoRequest send_system_info_request = 1105;
  }
}
